//============================================================================//
//                                                                            //
//            Copyright Â© 2015 - 2022 Sandpolis Software Foundation           //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPLv2. //
//                                                                            //
//============================================================================//
syntax = "proto3";

package core.protocol;

option java_package = "org.s7s.core.protocol";
option optimize_for = SPEED;

message RS_SyncPlugins {

    message PluginData {

        string package_id = 1;

        string version = 5;

        oneof source {
            // The plugin binary
            bytes plugin_binary = 2;

            // The plugin's HTTP location
            string plugin_url = 3;

            // The plugin's maven central coordinates
            string plugin_coordinates = 4;
        }
    }

    repeated PluginData plugin = 1;
}

// A request to download an artifact.
message RQ_DownloadArtifact {

    // The coordinates of the artifact to download
    string coordinates = 1;

    // Whether it's acceptable to receive the external location of the artifact only
    bool location = 2;
}

// The download response bearing the artifact binary or the artifact's address.
message RS_DownloadArtifact {
    oneof source {
        // The artifact binary
        bytes binary = 1;

        // The artifact's HTTP location
        string url = 2;

        // The artifact's maven central coordinates
        string coordinates = 3;
    }
}

// A request to install a server plugin.
message RQ_InstallPlugin {

    oneof source {
        // The plugin binary
        bytes plugin_binary = 1;

        // The plugin's HTTP location
        string plugin_url = 2;

        // The plugin's maven central coordinates
        string plugin_coordinates = 3;
    }
}

enum RS_InstallPlugin {

    // The operation was successful
    PLUGIN_INSTALL_OK = 0;

    // The operation failed
    PLUGIN_INSTALL_FAILED = 1;

    // The operation failed because plugins are disabled
    PLUGIN_INSTALL_FAILED_DISABLED = 2;

    // The operation failed because the plugin certificate could not be verified
    PLUGIN_INSTALL_FAILED_CERTIFICATE = 3;

    // The request was invalid
    PLUGIN_INSTALL_INVALID = 4;
}